--- a/gallery.html
+++ b/gallery.html
@@ -81,14 +81,10 @@
             <li class="nav-item">
               <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="schart.html">S-Chart</a>
-            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="index.html#Contact">Contact Us</a>
             </li>
           </ul>
-          <!-- Tombol Login di sebelah kanan dengan warna putih -->
           <a href="schart.html" class="btn btn-light ms-auto">Login</a>
         </div>
       </div>
@@ -149,6 +145,9 @@
         <p><b>Nike Air Max Koko</b></p>
       </div>
     </div>
+    <div class="text-center mt-4">
+      <button class="btn btn-primary" id="checkoutButton">Check Out</button>
+    </div>
   </main>
 
   <!-- Footer -->
@@ -161,6 +160,38 @@
     const yearElement = document.getElementById("year");
     const currentYear = new Date().getFullYear();
     yearElement.textContent = `Copyright Nike © ${currentYear}`;
+
+    // Daftar produk
+    const products = [
+      { name: "Nike Air Rift", price: "Rp 1.900.000" },
+      { name: "Air Jordan 1 Low SE", price: "Rp 2.750.000" },
+      { name: "Nike Air Force 1 Shadow", price: "Rp 2.050.000" },
+      { name: "Nike Air Max Koko", price: "Rp 3.000.000" }
+    ];
+
+    // Check Out Button Functionality
+    document.getElementById('checkoutButton').addEventListener('click', function() {
+      let productList = products.map((product, index) => `${index + 1}. ${product.name} - ${product.price}`).join('\n');
+      let productChoice = prompt("Pilih produk yang ingin Anda beli:\n" + productList, "1");
+      if (productChoice !== null) {
+        productChoice = parseInt(productChoice);
+        if (!isNaN(productChoice) && productChoice > 0 && productChoice <= products.length) {
+          let quantity = prompt("Berapa banyak produk yang ingin Anda beli?", "1");
+          if (quantity !== null) {
+            quantity = parseInt(quantity);
+            if (!isNaN(quantity) && quantity > 0) {
+              alert(`Anda telah memilih untuk membeli ${quantity} ${products[productChoice - 1].name}.`);
+              // Alihkan ke halaman pembelian.html
+              window.location.href = "pembelian.html?product=" + encodeURIComponent(products[productChoice - 1].name) + "&quantity=" + quantity;
+            } else {
+              alert("Silakan masukkan jumlah yang valid.");
+            }
+          }
+        } else {
+          alert("Silakan pilih produk yang valid.");
+        }
+      }
+    });
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
