--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
 
       <!-- Content Section -->
       <div class="col-md-5 offset-md-1">
+        <br>
         <h1 style="font-family: 'Barlow'; font-weight: bold;">Welcome to NIKE OFFICIAL</h1>
         <p style="font-family: Arial;" class="py-3">Where innovation, style, and performance converge! Discover our exclusive collection of top-tier shoes, apparel, and sports accessories designed to inspire your every move.</p>
         <!-- <div style="display: flex; align-items: center; gap: 5px;">
@@ -258,8 +259,8 @@
         <div class="card border-0 shadow shadow-lg">
           <div class="card-body">
             <section>
-              <h2 class="section-title">Brand Ambassadors</h2>
-              <div id="ambassadorCarousel" class="carousel slide" data-bs-ride="carousel">
+              <h2 class="section-title" id="ba">Brand Ambassadors</h2>
+              <div id="ambassadorCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000"> <!-- Set interval to 5000ms (5 seconds) -->
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <div class="row">
