--- a/news1.html
+++ b/news1.html
@@ -98,7 +98,7 @@
     <p class="py-3 justify-text">By choosing our eco-friendly collection, you are not just investing in high-quality sportswear; you are also supporting a movement towards sustainability. Together, we can make a difference and inspire others to follow suit. Explore the collection today and be part of the change!</p>
 
     <div class="text-center mt-4">
-      <a href="gallery.html" class="btn btn-primary">Shop the Eco-Friendly Collection</a>
+      <a href="pembelian.html" class="btn btn-primary">Shop the Eco-Friendly Collection</a>
     </div>
   </div>
 
