--- a/news2.html
+++ b/news2.html
@@ -96,7 +96,7 @@
   <p class="py-3 justify-text">Nike believes that every athlete deserves the chance to succeed, regardless of their background. Through this initiative, we aim to create a supportive environment that nurtures talent and fosters community spirit. We invite local athletes, coaches, and community members to join us in this exciting journey.</p>
 
   <div class="text-center mt-4">
-    <a href="gallery.html" class="btn btn-primary">Learn More About Our Initiative</a>
+    <a href="index.html#ba" class="btn btn-primary">Learn More About Our Initiative</a>
   </div>
 </div>
 
