--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }
 
     .card {
-      background-color: #2c2c2c; /* Dark background for cards */
+      background-color: #3e3c3c; /* Dark background for cards */
       border-radius: 10px; /* Rounded corners for cards */
     }
 
