--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
       max-width: 400px;
       margin: 100px auto;
       padding: 20px;
-      background-color: #2c2c2c;
+      background-color: #3e3c3c;
       border-radius: 8px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
